--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^7.3.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.94.1",
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.4",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.469.0",
     "next": "16.1.1",
+    "prisma": "^7.3.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-quill-new": "^3.8.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
