--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.94.1",
+    "@types/pg": "^8.16.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.4",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.469.0",
     "next": "16.1.1",
+    "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
