--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
@@ -17,6 +24,8 @@
     "@types/pg": "^8.16.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.4",
+    "exceljs": "^4.4.0",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.469.0",
     "next": "16.1.1",
